--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group               = com.riponmakers.poolguard
-version             = 0.0.5
+group               = com.riponmakers.lifeguard
+version             = 0.0.6
 sourceCompatibility = 17
 targetCompatibility = 17
 
